--- a/src/index.html
+++ b/src/index.html
@@ -74,7 +74,8 @@
 					<div class="InformationCard TitleCard">
 						<h3>{{ (displayDate === null) ? "" : (displayDate.toLocaleString("en-us", { month: "long" }) + " " + displayDate.getDate()) }}</h3>
 					</div>
-					<div v-for="item in infoCards" class="InformationCard">
+					<div v-for="item in infoCards" class="InformationCard" v-bind:id="'InfoCard_' + item.id" v-bind:key="item.id"
+						v-on:mouseenter="mouseenterInfoCard" v-on:mouseleave="mouseleaveInfoCard">
 						<h4>{{ item.placeName }}</h4>
 						<button v-bind:id="'BtnRemoveCard_' + item.id" class="InfoCardRemovalButton">X</button>
 						<table class="CountyInfoCardTable">
