Config dialog now rejects invalid choice combination.
Also it is better centered on the screen.

Closes: #46
Closes: #45

--- a/src/index.html
+++ b/src/index.html
@@ -244,6 +244,10 @@
 				<br>
 			</div>
 
+			<div v-for="item in configurationErrors" class="ConfigurationErrorSection">
+				{{ item }}
+			</div>
+
 			<div id="ConfigurationButtons">
 				<button id="BtnApplyConfigChanges" type="button">Apply</button>
 				<button id="BtnCancelConfigChanges" type="button">Cancel</button>
