--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,7 @@
 					</div>
 				</div>
 
-				<input id="AnimationSlider" type="range" min="0" v-bind:max="dateList.length" value="0">
+				<input id="AnimationSlider" type="range" min="0" v-bind:max="totalDays" value="0">
 
 				<div id="ControlButtonsContainer">
 					<button id="BtnSeekStart" type="button">|&lt;</button>
@@ -76,7 +76,7 @@
 			<div id="InformationColumn">
 				<div id="InformationPanel">
 					<div class="InformationCard TitleCard">
-						<h3>{{ (displayDate === null) ? "" : (displayDate.toLocaleString("en-us", { month: "long" }) + " " + displayDate.getDate()) }}</h3>
+						<h3>{{ displayDateString }}</h3>
 					</div>
 					<div v-for="item in infoCards" class="InformationCard" v-bind:id="'InfoCard_' + item.id" v-bind:key="item.id"
 						v-on:mouseenter="mouseenterInfoCard" v-on:mouseleave="mouseleaveInfoCard">
