--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
 					<div id="ZoomButtonContainer">
 						<button id="BtnZoomIn" type="button">+</button>
 						<button id="BtnZoomOut" type="button">-</button>
-						<button id="BtnZoomFull" type="button">&#9635</button>
+						<button id="BtnZoomFull" type="button">&#9635;</button>
 					</div>
 				</div>
 
