Updated data licensing info.
Issue: #12

--- a/src/index.html
+++ b/src/index.html
@@ -281,7 +281,7 @@
 				<ul>
 					<li>
 						<strong>Daily case and death reports by county:</strong>
-						Case and death data used in this project is built from the public New York Times data set housed here:
+						Case and death data is assembled from a public data set built by the New York Times and housed here:
 						<a href="https://github.com/nytimes/covid-19-data">https://github.com/nytimes/covid-19-data</a>
 						<br>
 						<ul>
@@ -296,6 +296,9 @@
 							<li>
 								All five counties which make up New York City are combined in the data set, and so they are treated as combined by this visualization as well.
 								Each county can be individually viewed, but all five show the same (combined) population, case counts, and death numbers.
+							</li>
+							<li>
+								Case and fatality data is used under <a href="https://github.com/nytimes/covid-19-data/blob/master/LICENSE">this license.</a>
 							</li>
 						</ul>
 					</li>
