Uses grid layout now. Some fixes still needed.
-Timeline is pushed down oddly.
-Map sizing and zooming doesn't work properly with varying size
of window.

Issue: #70

--- a/src/index.html
+++ b/src/index.html
@@ -8,75 +8,77 @@
 </head>
 <body>
 	<div v-cloak id="Everything">
-		<div id="ColumnsContainer">
-			<div id="MapColumn">
-				<div>
-					<h1>COVID-19 by U.S. County: <span id="ConfigPhrase">{{ mapConfigPhrase }}</span></h1>
-				</div>
+		<div id="GridContainer">
+			<div id="ConfigPhraseContainer">
+				<h1 style="display:none;">COVID-19 by U.S. County: <span style="display:none;" id="ConfigPhrase">{{ mapConfigPhrase }}</span></h1>
+			</div>
 
-				<div id="MapContainer">
-					<object id="SvgObject" type="image/svg+xml" data="images/Usa_counties_large.svg?ver=4">
-						Browser not supported.
-					</object>
-					<img id="DragMap" src="images/Usa_counties_large.png">
-					<div id="ZoomButtonContainer">
-						<button id="BtnZoomIn" type="button">+</button>
-						<button id="BtnZoomOut" type="button">-</button>
-						<button id="BtnZoomFull" type="button">&#9635;</button>
-					</div>
-				</div>
-
-				<div id="TimelineContainer">
-					<ul id="Timeline">
-						<li v-for="item in dateList" class="TimeLineDateBox">
-							{{ item.toLocaleString("en-us", { month: "long" }) }}
-							<br>
-							{{ item.getDate() }}
-						</li>
-					</ul>
-					<div id="TimelineFrame">
-						<div id="TimelineCoverLeft" class="TimelineCover"></div>
-						<div id="TimelineCoverRight" class="TimelineCover"></div>
-					</div>
-				</div>
-
-				<input id="AnimationSlider" type="range" min="0" v-bind:max="totalDays" value="0">
-
-				<div id="ControlButtonsContainer">
-					<button id="BtnSeekStart" type="button">|&lt;</button>
-					<button id="BtnStepBack" type="button">&lt;</button>
-					<button id="BtnPlay" type="button">&#9658;</button>
-					<button id="BtnStepForward" type="button">></button>
-					<button id="BtnPause" type="button">||</button>
-					<button id="BtnSeekEnd" type="button">>|</button>
-				</div>
-				
-				<div id="RangeKeyPanel">
-					<div class="ColorKeyContainer">
-						<div class="ColorKey" v-bind:style="{ backgroundColor: coloration.unknown }"></div>
-						<div>Unknown</div>
-					</div>
-					<div v-if="coloration.zero" class="ColorKeyContainer">
-						<div class="ColorKey" v-bind:style="{ backgroundColor: coloration.zero }"></div>
-						<div>Zero</div>
-					</div>
-					<div class="ColorKeyContainer" v-for="item in coloration.ranges">
-						<div class="ColorKey" v-bind:style="{ backgroundImage:'linear-gradient(to right,' + item.colorRange.start + ',' + item.colorRange.end + ')' }"></div>
-						<div>>{{ formatDataRangeDisplayNumber(item.dataRange.min) }} to {{ formatDataRangeDisplayNumber(item.dataRange.max) }}</div>
-					</div>
-					<div class="ColorKeyContainer">
-						<div class="ColorKey" v-bind:style="{ backgroundColor: coloration.exceedsMax }"></div>
-						<div>Exceeds {{ formatDataRangeDisplayNumber(maxColorRangeDataValue) }}</div>
-					</div>
-				</div>
-
-				<div id="SourcesAndInfoLinkPanel">
-					<span id="SourcesAndInfoLink">Page Info, Data Sources, Components, and Feedback</span>
+			<div id="MapContainer">
+				<object id="SvgObject" type="image/svg+xml" data="images/Usa_counties_large.svg?ver=4">
+					Browser not supported.
+				</object>
+				<img id="DragMap" src="images/Usa_counties_large.png" v-bind:style="{ display: dragMapDisplay }">
+				<div id="ZoomButtonContainer">
+					<button id="BtnZoomIn" type="button">+</button>
+					<button id="BtnZoomOut" type="button">-</button>
+					<button id="BtnZoomFull" type="button">&#9635;</button>
 				</div>
 			</div>
+
+			<div id="TimelineContainer">
+				<ul id="Timeline" v-bind:style="{ width: (timelineWidth + 'px') }">
+					<li id="TimeLineLeftBufferBox" v-bind:style="{ width: (timelineLeftBufferWidth + 'px') }"></li>
+					<li v-for="item in dateList" class="TimeLineDateBox">
+						{{ item.toLocaleString("en-us", { month: "long" }) }}
+						<br>
+						{{ item.getDate() }}
+					</li>
+					<li id="TimeLineRightBufferBox" v-bind:style="{ width: (timelineRightBufferWidth + 'px') }"></li>
+				</ul>
+				<div id="TimelineFrame">
+					<div id="TimelineCoverLeft" class="TimelineCover"></div>
+					<div id="TimelineCoverCenter" class="TimelineCover"></div>
+					<div id="TimelineCoverRight" class="TimelineCover"></div>
+				</div>
+			</div>
+
+			<div id="AnimationSliderContainer">
+				<input id="AnimationSlider" type="range" min="0" v-bind:max="totalDays" value="0">
+			</div>
+
+			<div id="ControlButtonsContainer">
+				<button id="BtnSeekStart" type="button">|&lt;</button>
+				<button id="BtnStepBack" type="button">&lt;</button>
+				<button id="BtnPlay" type="button">&#9658;</button>
+				<button id="BtnStepForward" type="button">></button>
+				<button id="BtnPause" type="button">||</button>
+				<button id="BtnSeekEnd" type="button">>|</button>
+			</div>
 			
-			<div id="InformationColumn">
-				<div id="InformationPanel">
+			<div id="RangeKeyPanel">
+				<div class="ColorKeyContainer">
+					<div class="ColorKey" v-bind:style="{ backgroundColor: coloration.unknown }"></div>
+					<div>Unknown</div>
+				</div>
+				<div v-if="coloration.zero" class="ColorKeyContainer">
+					<div class="ColorKey" v-bind:style="{ backgroundColor: coloration.zero }"></div>
+					<div>Zero</div>
+				</div>
+				<div class="ColorKeyContainer" v-for="item in coloration.ranges">
+					<div class="ColorKey" v-bind:style="{ backgroundImage:'linear-gradient(to right,' + item.colorRange.start + ',' + item.colorRange.end + ')' }"></div>
+					<div>>{{ formatDataRangeDisplayNumber(item.dataRange.min) }} to {{ formatDataRangeDisplayNumber(item.dataRange.max) }}</div>
+				</div>
+				<div class="ColorKeyContainer">
+					<div class="ColorKey" v-bind:style="{ backgroundColor: coloration.exceedsMax }"></div>
+					<div>Exceeds {{ formatDataRangeDisplayNumber(maxColorRangeDataValue) }}</div>
+				</div>
+			</div>
+
+			<div id="SourcesAndInfoLinkPanel">
+				<span id="SourcesAndInfoLink">Page Info, Data Sources, Components, and Feedback</span>
+			</div>
+			
+			<div id="InformationPanel">
 					<div class="InformationCard TitleCard">
 						<h3>{{ displayDateString }}</h3>
 					</div>
@@ -164,7 +166,6 @@
 					<div class="InformationCard" v-bind:style="{ display: infoCardInstructionDisplay }">
 						Double-click any county on the map to track its data here.
 					</div>
-				</div>
 			</div>
 		</div>
 
@@ -373,7 +374,6 @@
 		</div>
 	</div>
 
-	<script type="text/javascript" src="scripts/papaparse.js"></script>
 	<script type="module" src="modules/appUI.js"></script>
 </body>
 </html>
