Fixed: Page title not showing.
Temporarily disabled code had been left disabled.

Issue: #70

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 	<div v-cloak id="Everything">
 		<div id="GridContainer">
 			<div id="ConfigPhraseContainer">
-				<h1 style="display:none;">COVID-19 by U.S. County: <span style="display:none;" id="ConfigPhrase">{{ mapConfigPhrase }}</span></h1>
+				<h1>COVID-19 by U.S. County: <span id="ConfigPhrase">{{ mapConfigPhrase }}</span></h1>
 			</div>
 
 			<div id="MapContainer">
