Map dragging and zooming work more or less properly.
Still needed:
-Zoomed maps don't remain on the same area when window is resized.
-Zooming where the view window doesn't match the map aspect ratio
behaves in a way that might not be expected and can result in
zooming in on a blank area.
-Zooming may not work on mobile devices (needs testing).

Issue: #70

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,10 @@
 			</div>
 
 			<div id="MapContainer">
-				<object id="SvgObject" type="image/svg+xml" data="images/Usa_counties_large.svg?ver=4">
+				<object id="SvgObject"
+					v-bind:style="{ width:((mapContainerWidth * mapMagnification) + 'px'), height:((mapContainerHeight * mapMagnification) + 'px') }"
+					type="image/svg+xml"
+					data="images/Usa_counties_large.svg?ver=4">
 					Browser not supported.
 				</object>
 				<img id="DragMap" src="images/Usa_counties_large.png" v-bind:style="{ display: dragMapDisplay }">
