Some work toward rebuilding the zoom code.
Issue: #70

--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,7 @@
 					<button id="BtnZoomOut" type="button">-</button>
 					<button id="BtnZoomFull" type="button">&#9635;</button>
 				</div>
+				<div id="CenterDot"></div>
 			</div>
 
 			<div id="TimelineContainer">
